# RAG-Learning

./: .gitignore  README.md  app.py  core.py  ingest_data.py  pyproject.toml  requirements.txt
data/textfiles/: machine_learning.txt  python_intro.txt
notebook/: document.ipynb  pdf_loader.ipynb
src/: data_loader.py  embedding.py  search.py  vector_store.py
