[project]
name = "rag-learning"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chromadb>=1.5.2",
    "faiss-cpu>=1.13.2",
    "ipykernel>=7.2.0",
    "langchain>=1.2.10",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.17",
    "langchain-mistralai>=1.1.1",
    "langchain-text-splitters>=1.1.1",
    "pymupdf>=1.27.1",
    "pypdf>=6.7.5",
    "sentence-transformers>=5.2.3",
    "tqdm>=4.67.3",
]
